<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/peak_freq_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/txt_peak_frequency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peak_freq"
            android:textStyle="bold"
            android:textColor="@color/white_color"/>
        <TextView
            android:id="@+id/txt_peak_freq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/white_color"/>
    </LinearLayout>

    <com.spectrumanalyzer.ui.Panel
        android:id="@+id/SurfaceView01"
        android:layout_width="wrap_content"
        android:layout_height="200dp" >
    </com.spectrumanalyzer.ui.Panel>

    <LinearLayout
        android:id="@+id/center_freq_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/center_freq_texts"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_center_freq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/center_freq"
                android:textStyle="bold"
                android:textColor="@color/white_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/center_freq_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btn_shift_center_freq_to_left"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/less_than"/>
            <Button
                android:id="@+id/btn_shift_center_freq_to_right"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/greater_than"/>
        </LinearLayout>
    </LinearLayout>
    
	<TextView
        android:id="@+id/txt_sampling_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sampling_rate"
        android:textStyle="bold"
        android:textColor="@color/white_color"/>
    
    <Spinner
        android:id="@+id/sampling_rate_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_sampling_rate"/>
    
    <TextView
        android:id="@+id/txt_number_of_fft_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/number_of_fft_points"
        android:textStyle="bold"
        android:textColor="@color/white_color"/>

    <Spinner
        android:id="@+id/number_of_fft_points_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_number_of_fft_points"/>

</LinearLayout>